LIST OF CHANGES

 - Change instrument format page to only show current instruments

release 91.11.0
 - a partial reimplementation of the serialization framework for components
   and compositions in order to speed-up frequently used methods 
 - add geno files to disabled access list in http_sfweb.conf
 - cookie decryption - use an up-to-date Crypt::CBC API and algorithm
 - reduce the sleep type of the status daemon from 60 to 1 sec in order to
   reduce the time it takes to loop over the run folders on lustre 

release 91.10.0
 - script npg_samplesheet4MiSeq is removed this utility has been moved
   to a different git package; the samplesheet daemon stays in this
   package till all MiSeq instruments are redirected off old staging servers 

release 91.9.0
 - Change label 'New Instrument Mod' to 'New Instrument Upgrade' on the Admin page
 - Remove 'New Instrument Status' and 'New Run Status' options from Admin page
 - Sort the dropdown menu of instruments on the 'New Run' page
 - Staging servers usage page retired

release 91.8.0
 - BotSeq renamed Duplex-Seq
 - added new functions to long_info for BotSeq analysis
 - added support for NovaSeq v1.5 reagents, i5 index sequenced in opposite direction

release 91.7.0
 - remove the template for an unused tracking server url - run/summary -
   and all underlying code to remove obsolete SQL queries used by that code

release 91.6.0
 - enforce custom type NpgTrackingReadableFile to check that the
   given path is not only readable, but is actually a file
 - discontinue 'npgdonotmove' and 'npg_do_not_move' file and
   directory names being used as flags to stop moving the run folder
   from analysis to outgoing

release 91.5.0
 - ignore new revision field optionally added to primer panel name in LIMs.

release 91.4.0
 - disable downloading *.fa (consensus) files from tracking server
   views of staging folders
 - add executable for npg samplesheet4MiSeq wrapper
 - st::api::lims - two new accessors, 'sample_is_control'