@@ -1,19 +1,0 @@
-<!--begin $Id: manufacturer_list.tt2 2662 2008-08-06 12:23:37Z rmp $-->
-<table id="manufacturers" class="sortable zebra">
-  <caption>Manufacturers</caption>
-  <thead>
-    <tr>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody>
-[% FOREACH manufacturer = model.manufacturers %]
-    <tr>
-      <td><a href="[% SCRIPT_NAME %]/manufacturer/[% manufacturer.id_manufacturer %]">[% manufacturer.name %]</a></td>
-    </tr>
-[% END %]
-  </tbody>
-</table>
-
-<a href="[% SCRIPT_NAME %]/manufacturer/;add">New Manufacturer</a>
-<!--end $Id: manufacturer_list.tt2 2662 2008-08-06 12:23:37Z rmp $-->
